src/objects/JIRA_Project__c.object
<CustomObject>
    <fields>
        <fullName>Release_Android_Version__c</fullName>
        <description>Used for release line/porfolio mapping</description>
        <inlineHelpText>If TYPE is &quot;Release&quot;; used for release line/porfolio mapping
(ProdMgmt will populate this field)</inlineHelpText>
        <label>Release Android Version</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_Category__c</fullName>
        <description>Used for release line/porfolio mapping</description>
        <inlineHelpText>If TYPE is &quot;Release&quot;; used for release line/porfolio mapping</inlineHelpText>
        <label>Release Category</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DROID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Date_Range__c</fullName>
        <formula>Oldest_SA_Date__c - SA_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SA Date Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_Date__c</fullName>
        <label>Earliest SA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SW_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Leader</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Projects (SW Leader)</relationshipLabel>
        <relationshipName>SW_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SW_Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Product Manager</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipName>SW_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SW_Team_Tech_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Team Lead</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Projects (SW Team Tech Lead)</relationshipLabel>
        <relationshipName>SW_Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Engineer1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional field for the Privacy team</description>
        <label>Security Engineer1</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Projects (Security Engineer)</relationshipLabel>
        <relationshipName>SW_Projects5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Engineer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Privacy Team</description>
        <label>Security Engineer2</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Projects (Security Engineer2)</relationshipLabel>
        <relationshipName>SW_Projects5nub</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Engineer3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Privacy Team</description>
        <label>Security Engineer3</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Projects (Security Engineer3)</relationshipLabel>
        <relationshipName>SW_Projects5nul</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Review_Comments1__c</fullName>
        <description>Requested by Privacy team</description>
        <label>Security Review Comments1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_Review_Comments2__c</fullName>
        <label>Security Review Comments2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_Review_Comments3__c</fullName>
        <label>Security Review Comments3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_Review_Status1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Security Review Status1</label>
        <picklist>
            <picklistValues>
                <fullName>0 %</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Review_Status2__c</fullName>
        <label>Security Review Status2</label>
        <picklist>
            <picklistValues>
                <fullName>0 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Review_Status3__c</fullName>
        <label>Security Review Status3</label>
        <picklist>
            <picklistValues>
                <fullName>0 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Review_URL1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Security Review URL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Security_Review_URL2__c</fullName>
        <label>Security Review URL2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Security_Review_URL3__c</fullName>
        <label>Security Review URL3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Security_Risk_Level1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <inlineHelpText>S0 = Critical/Code Review
S1 = Critical
S2 = High
S3 = Medium
S4 = Low
S5 = Security Trivial</inlineHelpText>
        <label>Security Risk Level1</label>
        <picklist>
            <picklistValues>
                <fullName>S0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Risk_Level2__c</fullName>
        <inlineHelpText>S0 = Critical/Code Review 
S1 = Critical 
S2 = High 
S3 = Medium 
S4 = Low 
S5 = Security Trivial</inlineHelpText>
        <label>Security Risk Level2</label>
        <picklist>
            <picklistValues>
                <fullName>S0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Risk_Level3__c</fullName>
        <inlineHelpText>S0 = Critical/Code Review 
S1 = Critical 
S2 = High 
S3 = Medium 
S4 = Low 
S5 = Security Trivial</inlineHelpText>
        <label>Security Risk Level3</label>
        <picklist>
            <picklistValues>
                <fullName>S0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Software_PRD_Link_2__c</fullName>
        <inlineHelpText>Please enter any additional PRD links (if any)</inlineHelpText>
        <label>Overview/Summary Deck</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Software_PRD_Link_3__c</fullName>
        <inlineHelpText>Please enter any additional PRD links (if any)</inlineHelpText>
        <label>Competitive Deck</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Software_PRD_Link_4__c</fullName>
        <description>Specific field for use by D. Schuster, in POR chart</description>
        <inlineHelpText>Specific field for use by D. Schuster, in POR chart</inlineHelpText>
        <label>Product Backlog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Software_PRD_Link__c</fullName>
        <description>Software PRD Link</description>
        <inlineHelpText>Please enter the URL to the Software PRD Google Doc</inlineHelpText>
        <label>Product Description</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Spend_Delta__c</fullName>
        <formula>Projected_Spend__c - Actual_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spend Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IF(text(Status__c) = &quot;Canceled&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlHw&quot;, &quot;Red&quot;), 
IF( OR( text(Status__c) = &quot;Behind Plan&quot;, text(Status__c) = &quot;Pending&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI1&quot;, &quot;Yellow&quot;), 
IF( OR( text(Status__c) = &quot;On Plan&quot;, text(Status__c) = &quot;Commit&quot;, text(Status__c) = &quot;Approved&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI6&quot;, &quot;Green&quot;), 
IF(OR( text(Status__c) = &quot;Limited SA&quot;, text(Status__c) = &quot;Not Committed&quot;, text(Status__c) = &quot;New&quot;, text(Status__c) = &quot;Evaluate&quot;, text(Status__c) = &quot;Pursue&quot;, text(Status__c) == &quot;Dropped&quot; ) , IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlO9&quot;, &quot;Clear&quot;), 
&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Overall Status</label>
        <picklist>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TA_Date_Range__c</fullName>
        <formula>Oldest_TA_Date__c - TA_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TA Date Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TA_Date__c</fullName>
        <label>Earliest TA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tech_Team_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tech Team Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>JIRA_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_App_Issues__c</fullName>
        <label>Top App Issues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Big Data &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experiences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Work Arounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy &amp; Security (non-POR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Localization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1_pager__c</fullName>
        <label>1-pager</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sw_product_manager_text__c</fullName>
        <description>(hidden field, for reporting on POR slide)</description>
        <label>SW Product Manager text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tech_team_lead_text__c</fullName>
        <description>(hidden field, for reporting on POR slide)</description>
        <label>Tech Team Lead text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SW Project</label>
    <listViews>
        <fullName>All_projects</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>JIRA_Project_ID__c</columns>
        <columns>SW_Product_Manager__c</columns>
        <columns>SW_Team_Tech_Lead__c</columns>
        <columns>LE_Date__c</columns>
        <columns>SA_Date__c</columns>
        <columns>TA_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>Big_Data_Analytics</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Program_Manager__c</columns>
        <columns>JIRA_Project_ID__c</columns>
        <columns>SW_Product_Manager__c</columns>
        <columns>SW_Team_Tech_Lead__c</columns>
        <columns>LE_Date__c</columns>
        <columns>SA_Date__c</columns>
        <columns>TA_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Big Data &amp; Analytics</value>
        </filters>
        <label>Big Data &amp; Analytics</label>
    </listViews>
    <listViews>
        <fullName>Bus_Ops</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Program_Manager__c</columns>
        <columns>JIRA_Project_ID__c</columns>
        <columns>SW_Product_Manager__c</columns>
        <columns>SW_Leader__c</columns>
        <columns>SW_Team_Tech_Lead__c</columns>
        <columns>LE_Date__c</columns>
        <columns>SA_Date__c</columns>
        <columns>TA_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Bus Ops</value>
        </filters>
        <label>Bus Ops</label>
    </listViews>
    <listViews>
        <fullName>Experiences_POR_Grouping_for_Dave</fullName>
        <columns>Product_Area__c</columns>
        <columns>NAME</columns>
        <columns>POR_Status__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Experiences</value>
        </filters>
        <filters>
            <field>POR_Status__c</field>
            <operation>notEqual</operation>
            <value>,OUT,Exclude from POR Chart</value>
        </filters>
        <label>Experiences Parents (for Dave)</label>
    </listViews>
    <listViews>
        <fullName>Mainlines_Stables_Upgrades</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Program_Manager__c</columns>
        <columns>JIRA_Project_ID__c</columns>
        <columns>SW_Product_Manager__c</columns>
        <columns>SW_Team_Tech_Lead__c</columns>
        <columns>LE_Date__c</columns>
        <columns>SA_Date__c</columns>
        <columns>TA_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Legal Work Arounds</value>
        </filters>
        <label>Legal Work Arounds</label>
    </listViews>
    <listViews>
        <fullName>Mainlines_Stables_bring_ups_code_po</fullName>
        <columns>NAME</columns>
        <columns>POR_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Program_Manager__c</columns>
        <columns>JIRA_Project_ID__c</columns>
        <columns>SW_Product_Manager__c</columns>
        <columns>SW_Team_Tech_Lead__c</columns>
        <columns>LE_Date__c</columns>
        <columns>SA_Date__c</columns>
        <columns>TA_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Experiences</value>
        </filters>
        <label>Experiences</label>
    </listViews>
    <listViews>
        <fullName>X2013_Releases</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Release_Android_Version__c</columns>
        <columns>Program_Manager__c</columns>
        <columns>JIRA_Project_ID__c</columns>
        <columns>SW_Product_Manager__c</columns>
        <columns>SW_Team_Tech_Lead__c</columns>
        <columns>LE_Date__c</columns>
        <columns>SA_Date__c</columns>
        <columns>TA_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Release</value>
        </filters>
        <label>Releases</label>
    </listViews>
    <listViews>
        <fullName>X2014_Experiences</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Program_Manager__c</columns>
        <columns>JIRA_Project_ID__c</columns>
        <columns>SW_Product_Manager__c</columns>
        <columns>SW_Team_Tech_Lead__c</columns>
        <columns>LE_Date__c</columns>
        <columns>SA_Date__c</columns>
        <columns>TA_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Upgrades</value>
        </filters>
        <label>Upgrades</label>
    </listViews>
    <nameField>
        <label>SW Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SW Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Comment_for_behind_reason_as_other</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Behind_Reason__c,&quot;Other&quot;) &amp;&amp;  ISBLANK(Comments__c)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please fill out comments to elaborate on the behind reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Select_Behind_reason_when_behing</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status__c ,&quot;Behind Plan&quot;) &amp;&amp; ISPICKVAL(Behind_Reason__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Behind_Reason__c</errorDisplayField>
        <errorMessage>Please select a reason this project is behind</errorMessage>
    </validationRules>
</CustomObject>